# ergoreq

./: Cargo.toml  LICENSE  README.md
.github/workflows/: main.yml
examples/: auto_redirect.rs  build_url_with_string.rs  cookie_store.rs  custom_middleware.rs  simple_request.rs
src/: error.rs  lib.rs
src/cookie/: cookie_container.rs  cookie_parser.rs  mod.rs
src/middleware/: auto_redirect_middleware.rs  auto_retry_middleware.rs  middleware.rs  mod.rs
src/utils/: mod.rs  string_ext.rs  string_url_builder.rs
src/wrappers/: client_wrapper.rs  mod.rs  request_builder_wrapper.rs
tests/: test_auto_redirect.rs  test_build_url_with_string.rs  test_cookie_container.rs
